@@ -2,6 +2,8 @@ lintian-brush (0.21) UNRELEASED; urgency=medium
 
   * Use vcswatch-like regex to find salsa.debian.org.
   * Support suggesting Vcs-* URLs based on vcswatch.
+  * Avoid adding unnecessary spacing when removing first dependency from
+    a control field.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 03 Aug 2019 22:50:11 +0000
 
